ipc/ipdl/test/ipdl/ok/PmultiManager2.ipdl
include protocol PmultiManaged;

protocol PmultiManager2 {
    manages PmultiManaged;

child:
    async PmultiManaged();
};
