ipc/ipdl/test/ipdl/error/opensSubprotocol.ipdl
include protocol subprotocolOpens;

protocol opensSubprotocol {
    child opens subprotocolOpens;

    manages subprotocolOpens;

child:
    subprotocolOpens();
    async __delete__();

state DEAD: send __delete__;
};
